--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # responsive_scaffold: ^1.3.0+2
+  responsive_scaffold:
+    git:
+      url: https://github.com/AzadCoder/responsive_scaffold
+      ref: master
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -45,9 +50,19 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/logo.png
+    - assets/images/facebookLogo.png
+    - assets/images/gmailLogo.png
+    - assets/images/logoText.png
+    - assets/images/add-to-list.png
+    - assets/images/comment-add.png
+    - assets/images/editIcon.png
+    - assets/images/favoriteDishesIcon.png
+    - assets/images/my_order.png
+    - assets/images/dashboard_icon.png
+    - assets/images/categoriesIcon.png
+    - assets/images/dishesIcon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
