--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   # responsive_scaffold: ^1.3.0+2
+  responsive_grid: ^1.2.1+1
+  smooth_star_rating: ^1.1.1
+  carousel_slider: ^3.0.0
   responsive_scaffold:
     git:
       url: https://github.com/AzadCoder/responsive_scaffold
