--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.restaurant">
-   <application
+    <application
         android:label="restaurant"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -30,6 +30,17 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Accepts URIs that begin with https://YOUR_HOST -->
+                <data
+          android:scheme="https"
+          android:host="restaurant.webfumeprojects.online"
+          android:pathPrefix="/api/forgotpassword" 
+           />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
