--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,11 @@ dev_dependencies:
   # responsive_scaffold: ^1.3.0+2
   responsive_grid: ^1.2.1+1
   smooth_star_rating: ^1.1.1
+  provider: ^4.3.2
+  dio: ^3.0.10
   carousel_slider: ^3.0.0
+  shared_preferences: ^0.5.12+4
+  uni_links: ^0.4.0
   responsive_scaffold:
     git:
       url: https://github.com/AzadCoder/responsive_scaffold
