--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: ^3.0.10
   font_awesome_flutter: ^8.11.0
   image_picker: ^0.6.7+12
+  connectivity_wrapper: ^1.0.0
   multi_image_picker: ^4.6.5
   image_cropper: ^1.3.1
   jiffy: ^3.0.1
